--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
         <div class="row">
+            <div class="col s12"></div>
+        </div>
+        <div class="row">
             <div class="col s12 m4">
                 <div class="card"></div>
             </div>
@@ -26,7 +29,7 @@
                         <p>Basic demo card.</p>
                     </div> -->
                     <div class="card-action">
-                        <a href="https://popatkaran.wordpress.com/">Karan Popat</a>
+                        <a href="https://popatkaran.github.io/popatkaran">Karan Popat</a>
                     </div>
                 </div>
             </div>
