--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <div class="card-action">
                         <a href="https://popatkaran.github.io/popatkaran">Karan Popat</a>
                     </div>
+                    <div class="card-action" style="display: none">
+                        <a href="https://popatkaran.github.io/karan-vishva">TheGreenbirds Wedding</a>
+                    </div>
                 </div>
             </div>
             <div class="col s12 m4">
