--- a/karan-vishva/index.html
+++ b/karan-vishva/index.html
@@ -1,17 +1,17 @@
 <!--
 ===========================================================
 
-[ INSTA , HTML File ]
+[ TheGreenbirdGroup , HTML File ]
 
-  Template Name : INSTA - Responsive Onepage Resume Template
+  Template Name : TheGreenbirdsWedding - Responsive Onepage wedding invitation Template
   
   Version    :  1.0 
   
-  Author     :  Pixel_Factory
+  Author     :  TheGreenbirdGroup
   
-  Author URI :  http://themeforest.net/user/Pixel_Factory
+  Author URI :  http://www.thegreenbirdgroup.com/
   
-  Author Email : h.nafees.anwar@gmail.com
+  Author Email : thegreenbirdgroup@gmail.com
 
 ==========================================================
 -->
