--- a/karan-vishva/index.html
+++ b/karan-vishva/index.html
@@ -117,8 +117,8 @@
                     </div>
                     <div class="col-sm-10">
                         <!-- <h2>PR<span>O</span>FILE</h2> -->
-                        <h2>Karan Popat</h2>
-                        <h3>Some words about me.</h3>
+                      <h2>Yes, we are <span>C</span>ommited</h2>
+                        <h3>Some words about the assiduous/sedulous couple.</h3>
                     </div>
                 </div>
             </div>
