--- a/karan-vishva/index.html
+++ b/karan-vishva/index.html
@@ -138,7 +138,7 @@
                         <i class="fa fa-graduation-cap"></i>
                     </div>
                     <div class="col-sm-10">
-                        <h2>RE<span>S</span>UME</h2>
+                        <h2>Our Family</h2>
                         <h3>Something about my experience and skills.</h3>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                         <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-sm-10">
-                        <h2>PORT<span>F</span>OLIO</h2>
+                        <h2>Functions</h2>
                         <h3>Have a spoon of my work.</h3>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                         <i class="fa fa-envelope-o"></i>
                     </div>
                     <div class="col-sm-10">
-                        <h2>CO<span>N</span>TACT</h2>
+                        <h2>Your blessings</h2>
                         <h3>Say hello or find me.</h3>
                     </div>
                 </div>
