--- a/karan-vishva/index.html
+++ b/karan-vishva/index.html
@@ -120,7 +120,7 @@
                     </div>
                     <div class="col-sm-10">
                         <!-- <h2>PR<span>O</span>FILE</h2> -->
-                      <h2>Yes, we are <span>C</span>ommited</h2>
+                      <h2>Yes, we are Commited</h2>
                         <h3>Some words about the assiduous couple.</h3>
                     </div>
                 </div>
