--- a/karan-vishva/index.html
+++ b/karan-vishva/index.html
@@ -114,14 +114,14 @@
                 <img alt="" src="images/menu/profile_btn.jpg">
                 <!-- <div class="mask">
                 </div> -->
-                <div class="heading col-xs-11 col-xs-offset-1">
+                <div class="heading">
                     <div class="col-xs-2 hidden-xs">
                         <i class="fa fa-user"></i>
                     </div>
                     <div class="col-sm-10">
                         <!-- <h2>PR<span>O</span>FILE</h2> -->
-                      <h2>Yes, we are Commited</h2>
-                        <h3>Some words about the assiduous couple.</h3>
+                      <h2>Happy couple</h2>
+                        <h3 class="hidden-xs">Some words about the assiduous couple.</h3>
                     </div>
                 </div>
             </div>
@@ -133,13 +133,13 @@
                 <img alt="" src="images/menu/resume_btn.jpg">
                 <!-- <div class="mask">
                 </div> -->
-                <div class="heading col-xs-11 col-xs-offset-1">
+                <div class="heading">
                     <div class="col-xs-2 hidden-xs">
                         <i class="fa fa-graduation-cap"></i>
                     </div>
                     <div class="col-sm-10">
                         <h2>Our Family</h2>
-                        <h3>Something about my experience and skills.</h3>
+                        <h3 class="hidden-xs">Something about my experience and skills.</h3>
                     </div>
                 </div>
             </div>
@@ -150,13 +150,13 @@
                 <img alt="" src="images/menu/portfolio_btn.jpg">
                 <!-- <div class="mask">
                 </div> -->
-                <div class="heading col-xs-11 col-xs-offset-1">
+                <div class="heading">
                     <div class="col-xs-2 hidden-xs">
                         <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-sm-10">
                         <h2>Functions</h2>
-                        <h3>Have a spoon of my work.</h3>
+                        <h3 class="hidden-xs">Have a spoon of my work.</h3>
                     </div>
                 </div>
             </div>
@@ -167,13 +167,13 @@
                 <img alt="" src="images/menu/contact_btn.jpg">
                 <!-- <div class="mask">
                 </div> -->
-                <div class="heading col-xs-11 col-xs-offset-1">
+                <div class="heading">
                     <div class="col-xs-2 hidden-xs">
                         <i class="fa fa-envelope-o"></i>
                     </div>
                     <div class="col-sm-10">
                         <h2>Your blessings</h2>
-                        <h3>Say hello or find me.</h3>
+                        <h3 class="hidden-xs">Say hello or find me.</h3>
                     </div>
                 </div>
             </div>
