check bg image for menu

--- a/karan-vishva/index.html
+++ b/karan-vishva/index.html
@@ -111,7 +111,7 @@
         
         <div class="menu">
             <div class="profile-btn col-xs-6 col-sm-12">
-                <img alt="" src="images/menu/profile_btn.jpg">
+                <!--<img alt="" src="images/menu/profile_btn.jpg">-->
                 <!-- <div class="mask">
                 </div> -->
                 <div class="heading">
